# it-heroes

./: .gitignore  PROJECT_SPEC.md  README.md  docker-compose.yml  implementation_plan.md.resolved  package.json
.agent/rules/: dev-fe.md  dev-react.md
.agent/workflows/: fe-dev.md  fe-new-component.md  fe-new-page.md
.chibi/: departments.yml
FE/: Dockerfile  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
FE/src/: App.tsx  electron.d.ts
apps/backend/: config.py  database.py  main.py  pyproject.toml  requirements.txt
apps/backend/models/: __init__.py  agent.py  event_log.py  office_layout.py  project.py  session.py  task.py  workflow.py
apps/backend/routers/: agents.py  auth.py  filesystem.py  office_layouts.py  orchestration.py  projects.py  system.py  tasks.py  teams.py  workflows.py
apps/backend/services/: __init__.py  adapter_factory.py  agent_orchestrator.py  agent_sdk_adapter.py  anthropic_adapter.py  auth.py  claude_adapter.py  git_workspace.py  nav_graph_generator.py  simulation.py  task_dispatcher.py  team_file_watcher.py  team_manager.py  team_presets.py  unified_orchestrator.py
apps/backend/websocket/: __init__.py  events.py  manager.py
apps/desktop/: main.js  package-lock.json  package.json  preload.js
apps/renderer/: index.html  package-lock.json  package.json  vite.config.js
backend/: Dockerfile  config.py  database.py  main.py  requirements.txt
backend/models/: __init__.py  agent.py  message.py  notification.py  (+3 more)
electron/: main.js  package-lock.json  package.json  preload.js
scripts/: generate_chibi.mjs  setup.sh
(+109 files in other folders)
