[project]
name = "chibi-office-backend"
version = "0.1.0"
description = "Chibi Office AI — FastAPI Backend for agent orchestration"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlmodel>=0.0.24",
    "gitpython>=3.1.44",
    "websockets>=14.0",
    "pyyaml>=6.0.2",
    "aiofiles>=24.1.0",
    "python-multipart>=0.0.19",
    "claude-agent-sdk>=0.1.33",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
    "ruff>=0.9.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
